[package]
name = "ldkalby"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "ldkalby_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bip39 = { version = "*", features=["rand_core"] }
hex = "0.4"
once_cell = "*"
rand = "*"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uniffi_bindgen = "0.25.0"
uniffi_macros = "0.25.0"
uniffi = { version = "0.25.0", features = ["cli"] }
ldk-node = "0.2.1"

[build-dependencies]
#uniffi = { version = "0.25.0", features = ["build"] }
uniffi_build = { version = "0.25.0" }
uniffi_bindgen = "0.25.0"

[dev-dependencies]
uniffi = { version = "0.25.0", features = ["bindgen-tests"] }
